--- a/public/committees-names-manage.html
+++ b/public/committees-names-manage.html
@@ -12,7 +12,7 @@
     .container{max-width:1000px;margin-top:40px}
     .card{border-radius:16px;box-shadow:0 6px 18px rgba(0,0,0,.06)}
 
-    /* شارة معلومات  المستخدم — نفس نمط إدارة المستخدمين */
+    /* شارة معلومات المستخدم */
     .user-chip{
       display:inline-flex;align-items:center;gap:.25rem;
       font-size:1rem!important;padding:.375rem .75rem!important;
@@ -32,17 +32,21 @@
     /* جدول ثابت الرأس */
     .table-responsive{max-height:520px;overflow:auto}
     thead th{position:sticky;top:0;background:#fff;z-index:1}
+
+    /* بطاقات الإحصاءات */
+    .stat-card{border-radius:14px;border:1px solid #e9ecef;background:#fff;padding:14px 16px}
+    .stat-label{color:#6c757d;font-size:.9rem}
+    .stat-value{font-weight:700;font-size:1.25rem}
+    .stat-sub{color:#6c757d;font-size:.85rem}
   </style>
 </head>
 <body>
   <div class="container">
     <!-- Header -->
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2">
-      <!-- يمين: العنوان فقط (بدون أيقونة) -->
       <div class="d-flex align-items-center gap-2">
         <h3 class="mb-0">إدارة أسماء اللجان</h3>
       </div>
-      <!-- يسار: معلومات المستخدم + لوحة التحكم + خروج -->
       <div class="d-flex align-items-center gap-2">
         <span id="userInfo" class="user-chip badge bg-light text-dark border">
           <i class="bi bi-person"></i>
@@ -57,6 +61,30 @@
         <button id="logoutBtn" class="btn btn-danger">
           <i class="bi bi-box-arrow-right"></i> خروج
         </button>
+      </div>
+    </div>
+
+    <!-- إحصاءات صغيرة -->
+    <div class="mb-3">
+      <div class="row g-3">
+        <div class="col-md-4">
+          <div class="stat-card">
+            <div class="stat-label">إجمالي اللجان</div>
+            <div class="stat-value" id="statTotal">
+              <span class="skeleton" style="display:inline-block;width:60px;height:20px;border-radius:6px;"></span>
+            </div>
+            <div class="stat-sub">المعروضة ضمن النظام</div>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <div class="stat-card">
+            <div class="stat-label">آخر تغيير على أسماء اللجان</div>
+            <div class="stat-value" id="statLastChange">
+              <span class="skeleton" style="display:inline-block;width:200px;height:20px;border-radius:6px;"></span>
+            </div>
+            <div class="stat-sub" id="statLastChangeSub">—</div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -189,7 +217,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    /* ===== أساس البيئة (Render / GitHub Pages / Local) ===== */
+    /* ===== أساس البيئة ===== */
     const RENDER_BASE = 'https://vdash-qkyv.onrender.com';
     const host = location.hostname;
     const isGithub = host.endsWith('github.io');
@@ -272,19 +300,37 @@
     addCollapseEl.addEventListener('hide.bs.collapse', ()=> addToggleIcon.className='bi bi-plus-lg');
 
     /* ===== حالة الصفحة ===== */
-    const state = {
-      items: [],
-      page: 1,
-      limit: 20,
-      sort: 'name', // أو -name
-      q: ''
-    };
-
+    const state = { items: [], page:1, limit:20, sort:'name', q:'' };
     const tbody = document.getElementById('committeesTbody');
 
     /* ===== أدوات عامة ===== */
     function debounce(fn, ms){ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn(...a), ms); }; }
     function esc(s){ return String(s??'').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;'); }
+
+    /* ===== الإحصاءات ===== */
+    function updateTotalStat(n){
+      document.getElementById('statTotal').textContent = n;
+    }
+    function updateLastChangeStat({whenText='—', action='—', who='—'}={}){
+      document.getElementById('statLastChange').textContent = whenText;
+      document.getElementById('statLastChangeSub').textContent = `الإجراء: ${action} — بواسطة: ${who}`;
+    }
+    async function fetchLastCommitteeChange(){
+      try{
+        const params = new URLSearchParams({ model:'Committee', page:1, limit:1 });
+        const r = await apiFetch('/api/audit-logs?'+params.toString());
+        if(!r.ok) throw 0;
+        const data = await r.json();
+        const last = data?.items?.[0];
+        if(!last){ updateLastChangeStat({ whenText:'—', action:'—', who:'—' }); return; }
+        const when = last.createdAt ? new Date(last.createdAt) : null;
+        const whenText = when ? when.toLocaleString('ar-EG') : '—';
+        const who = last.user?.name || last.user?.username || 'غير معروف';
+        updateLastChangeStat({ whenText, action:last.action || '—', who });
+      }catch{
+        updateLastChangeStat({ whenText:'—', action:'—', who:'—' });
+      }
+    }
 
     /* ===== رسم الصفوف ===== */
     function renderRows(rows, offset=0){
@@ -309,7 +355,7 @@
 
     /* ===== تحميل (مع بحث/ترتيب/ترقيم) ===== */
     async function fetchCommittees(){
-      // إظهار سكلتون
+      // سكلتون
       tbody.innerHTML = `<tr><td colspan="3">
         <div class="skeleton" style="height:18px;margin:8px 0;"></div>
         <div class="skeleton" style="height:18px;margin:8px 0;"></div>
@@ -317,7 +363,6 @@
       </td></tr>`;
 
       try{
-        // نجلب الكل ثم نرشّح على الواجهة (العدد عادة بسيط)
         const r = await apiFetch('/api/committees-master');
         if(r.status===401 || r.status===403){
           showError('❌ انتهت الجلسة أو لا تملك صلاحية');
@@ -326,6 +371,9 @@
         }
         if(!r.ok) throw new Error('HTTP '+r.status);
         const arr = await r.json();
+
+        // إحصاء العدد الإجمالي
+        updateTotalStat(Array.isArray(arr) ? arr.length : 0);
 
         // فلترة/ترتيب/تقسيم صفحات
         let items = arr;
@@ -346,9 +394,14 @@
         const pageItems = items.slice(start, start+state.limit);
         renderRows(pageItems, start);
         document.getElementById('pageNum').textContent = state.page;
+
+        // آخر تغيير
+        fetchLastCommitteeChange();
       }catch(e){
         tbody.innerHTML = `<tr class="text-center text-danger"><td colspan="3">فشل جلب اللجان</td></tr>`;
         console.error('fetchCommittees error:', e);
+        updateTotalStat('—');
+        updateLastChangeStat({ whenText:'—', action:'—', who:'—' });
       }
     }
 
@@ -356,9 +409,8 @@
     const addForm = document.getElementById('addForm');
     const addBtn  = document.getElementById('addBtn');
     const nameInput = document.getElementById('committeeName');
-
-    // تنبيه تكرار الاسم (تقريبي من الواجهة)
     const dupHint = document.getElementById('dupHint');
+
     const checkDup = debounce(()=>{
       const v = nameInput.value.trim().toLocaleLowerCase();
       if(!v){ dupHint.textContent=''; return; }
@@ -400,12 +452,12 @@
         const data = await r.json().catch(()=> ({}));
         if(!r.ok) throw new Error(data?.message || 'فشل التعديل (قد يكون الاسم مكررًا)');
         showSuccess('✅ تم التعديل');
-        // وميض الصف
         const row = tbody.querySelector(`tr[data-id="${id}"]`);
         row?.classList.add('row-highlight'); setTimeout(()=>row?.classList.remove('row-highlight'),600);
+        // حدّث الإحصاءات (آخر تغيير)
+        fetchLastCommitteeChange();
       }catch(err){
         showError('❌ '+(err.message||'فشل التعديل'));
-        // أعد التحميل لإرجاع القيمة القديمة
         fetchCommittees();
       }
     }
@@ -419,8 +471,7 @@
         const data = await r.json().catch(()=> ({}));
         if(!r.ok) throw new Error(data?.message || 'فشل الحذف');
         showSuccess('🗑️ تم الحذف');
-        // ابقَ على نفس الصفحة إن أمكن
-        await fetchCommittees();
+        await fetchCommittees();     // سيحدّث العدد + آخر تغيير
       }catch(err){
         showError('❌ '+(err.message||'فشل الحذف'));
       }
@@ -453,7 +504,6 @@
       if(state.page < maxPage){ state.page++; fetchCommittees(); }
     });
 
-    // أحداث الجدول: حذف + حفظ فوري عند تغيير الاسم
     tbody.addEventListener('click', (e)=>{
       const btn = e.target.closest('button');
       if(!btn) return;
@@ -484,7 +534,7 @@
         await ensureAdmin();
         document.getElementById('homeBtn').href = go('/committees-home.html');
         await fetchCommittees();
-      }catch(e){ /* تم التعامل مع التحويل داخل ensureAdmin */ }
+      }catch(e){ /* التحويل تم مسبقًا عند الحاجة */ }
     })();
   </script>
 </body>
